WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311810
REGRESSION(
310666@main
): requestAnimationFrame and requestVideoFrameCallback callbacks are not fired in isolated worlds when JS is disabled in the main page.
https://bugs.webkit.org/show_bug.cgi?id=311810
Summary
REGRESSION(310666@main): requestAnimationFrame and requestVideoFrameCallback ...
Carlos Alberto Lopez Perez
Reported
2026-04-09 04:09:57 PDT
After
310666@main
, ScriptedAnimationController::serviceRequestAnimationFrameCallbacks and HTMLVideoElement::serviceRequestVideoFrameCallbacks return early when canExecuteScripts(AboutToExecuteScript) returns false. Ideally in the call to canExecuteScripts(AboutToExecuteScript) it should be passing the isolatedWorld it belongs to, so canExecuteScripts returns true instead of false, but the problem is that both rAF and requestVideoFrameCallback are not aware of which world the callbacks were registered from, so its not possible to pass that (AFAIK). As a result, rAF and requestVideoFrameCallback callbacks registered from isolated worlds (e.g. browser extensions or injected scripts) are silently dropped when JavaScript is disabled in the main page.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2026-04-09 04:24:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62348
Radar WebKit Bug Importer
Comment 2
2026-04-09 08:36:24 PDT
<
rdar://problem/174412226
>
EWS
Comment 3
2026-04-13 02:17:14 PDT
Committed
311058@main
(e46c5005ecf3): <
https://commits.webkit.org/311058@main
> Reviewed commits have been landed. Closing PR #62348 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug